# glassbar

./: .gitignore  README.md  pinned.example.json
.signpath/: SIGNPATH_SETUP.md
docs/superpowers/plans/: 2026-04-25-glassbar.md
docs/superpowers/specs/: 2026-04-25-glassbar-design.md  2026-05-17-voice-ptt-dock-button-design.md
scripts/: setup-lhm-autostart.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_actions.rs  app_tracker.rs  autostart.rs  commands.rs  config.rs  dock_autohide.rs  dwm.rs  icons.rs  import_pinned.rs  keyhook.rs  logger.rs  main.rs  pinned.rs  shell_taskbar.rs  stash.rs  voice.rs  widget_state.rs  win32.rs  windows_setup.rs  wndproc.rs
src-tauri/src/widgets/: audio.rs  battery.rs  claude_usage.rs  clipboard.rs  clock.rs  files.rs  internet.rs  keyboard.rs  media.rs  mod.rs  network.rs  start_menu.rs  sysstats.rs  thermal.rs  uwp.rs  warp.rs  weather.rs
ui/clipboard/: app.js  index.html  style.css
ui/dock/: app.js  index.html  style.css
ui/hud/: app.js  index.html  style.css
ui/menu/: app.js  index.html  style.css
ui/shared/: glass.css  theme.js
ui/spotlight/: app.js  index.html  style.css
