[package]
name = "glassbar"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
window-vibrancy = "0.5"
directories = "5"
notify = "6"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Shell",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
  "Win32_Graphics_Gdi",
  "Win32_Storage_FileSystem",
  "Media_Control",
  "Foundation",
] }
image = { version = "0.25", default-features = false, features = ["png"] }
sha2 = "0.10"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
sysinfo = { version = "0.32", default-features = false, features = ["network"] }
winreg = "0.52"

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
