[package]
name = "glassbar"
version = "0.1.23"
edition = "2021"
# Explicit default-run so `cargo build` / `cargo tauri build` pick
# glassbar.exe as the main binary even with the second `uninstall`
# bin sitting in src/bin/. Without this Tauri's bundler can pick the
# wrong one and ship the uninstaller as the app.
default-run = "glassbar"

[[bin]]
name = "glassbar"
path = "src/main.rs"

[[bin]]
name = "uninstall"
path = "src/bin/uninstall.rs"

[[bin]]
name = "updater"
path = "src/bin/updater.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
window-vibrancy = "0.5"
directories = "5"
notify = "6"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Shell",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_Globalization",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
  "Win32_System_Com",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Dwm",
  "Win32_UI_Controls",
  "Win32_Storage_FileSystem",
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Media_Control",
  "Foundation",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_System_Power",
  "Win32_Storage_FileSystem",
  "Win32_System_Registry",
  "Win32_Security",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Variant",
  "Storage_Streams",
] }
image = { version = "0.25", default-features = false, features = ["png"] }
sha2 = "0.10"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
sysinfo = { version = "0.32", default-features = false, features = ["network", "system"] }
winreg = "0.52"
webview2-com = "0.38"
windows-core = "0.61"
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
tauri-plugin-drag = "2"
arboard = { version = "3", default-features = false, features = ["image-data"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
